classDiagram
    Vista --> DAOUser
    DAOUser --> User
    User --|> Vista

    class Vista {
    +ShowId
    +ShowUsername
    +ShowEmail
    +ShowPassword
    }

    class DAOUser {
    +getUserByUsername
    +getUserById
    +getUserByEmail
    }

    class User {
    -int id
    -String username
    -String password
    -String email
    -int id_rol
    +consultarInfant():void
    +iniciarSessio():boolean
    }

